quickstart/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
spec:
  type: NodePort
  selector:
    app: go-app-go
  ports:
    - name: http
      protocol: TCP
      nodePort: 30088
      port: 80
      targetPort: 8080
